<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wamt.ui.main.user.CreateUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wamt"
            android:textSize="24sp"
            android:layout_margin="24dp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileName"
            android:textSize="20sp"
            android:layout_margin="24dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:hint="@string/enter_your_name"/>

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingHorizontal="24dp"
            android:textSize="14sp"
            android:text="@string/create_user" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_circle_button"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/close"
        android:padding="8dp" />

</FrameLayout>