<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wamt.ui.main.user.UserListFragment"
    android:gravity="center_horizontal">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wamt"
        android:textSize="24sp"
        android:layout_margin="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userPseudoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
         />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="24dp"
        android:textSize="14sp"
        android:text="@string/create_user" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/deleteUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/delete_user"
        android:textColor="@android:color/holo_red_light"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp" />


</LinearLayout>